<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/logocalculadora"
            tools:srcCompat="@drawable/logocalculadora" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textView"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="false"
            android:background="@null"
            android:clickable="false"
            android:hint="@string/fakeHint"
            android:longClickable="false"
            android:text="@string/display"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">


        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="310dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/backspace"
            android:src="@drawable/backspace"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:src="@drawable/backspace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="@android:color/holo_purple"
                    android:text="@string/clear"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:backgroundTint="@null" />

                <TextView
                    android:id="@+id/tResult"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:autoSizeMinTextSize="20dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="#A1A0A0"
                    android:textColorHint="#A1A0A0"
                    android:textSize="20dp"

                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/divide"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/seven"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/seven"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/eight"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/nine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/multiply"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/multiply"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/four"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/five"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/six"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/minus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/subtract"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/one"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/two"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/three"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/add"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/add"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/zero"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/circle"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/point"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:text="@string/point"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/equals"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#43A047"
                    android:text="@string/equals"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>